fixed evaluation using all features

--- a/evaluation/TMT_data/01_run_deqms.ipynb
+++ b/evaluation/TMT_data/01_run_deqms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -399,9 +399,7 @@
     "    cat(\"Rows after filtering 1 count:\", nrow(intensities), \"\\n\")\n",
     "\n",
     "    filter_list_META[[dataset]][[name]] <- rownames(intensities)\n",
-    "\n",
-    "    # filters (to analyze the same proteins)\n",
-    "    # intensities <- intensities[analyzed_proteins[[dataset]],]\n",
+    "    analyzed_proteins[[dataset]][[name]] <- rownames(intensities)\n",
     "    cat(\"Rows after all filters:\", nrow(intensities), \"\\n\")\n",
     "    cat(\"Samples: \", ncol(intensities), \"\\n\")\n",
     "\n",
@@ -477,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -527,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -604,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -635,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -908,7 +906,7 @@
     "  # }\n",
     "  \n",
     "  cat(\"Rows after all filters:\", nrow(central_intensities), \"\\n\")\n",
-    "  analyzed_proteins[[dataset]] <- rownames(central_intensities)\n",
+    "  # analyzed_proteins[[dataset]] <- rownames(central_intensities)\n",
     "  \n",
     "  filter_list_META[[dataset]][['Central']] <- rownames(central_intensities)\n",
     "\n",
@@ -973,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1223,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1240,7 +1238,8 @@
     "}\n",
     "\n",
     "# write to json\n",
-    "write_json(analysed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/TMT_data/analysed_proteins.json\")"
+    "write_json(analysed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/TMT_data/analysed_proteins.json\")\n",
+    "write_json(analyzed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/TMT_data/analysed_proteins_LABS.json\")"
    ]
   },
   {
@@ -1252,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1271,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1290,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
