--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,13 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘matrixStats’ was built under R version 4.2.3”\n",
+      "Loading required package: limma\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcount()\u001b[39m  masks \u001b[34mmatrixStats\u001b[39m::count()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Warning message:\n",
+      "“package ‘ggrepel’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘data.table’ was built under R version 4.2.2”\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:lubridate’:\n",
+      "\n",
+      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
+      "    yday, year\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘foreach’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘foreach’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:purrr’:\n",
+      "\n",
+      "    accumulate, when\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘jsonlite’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    flatten\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(DEqMS)\n",
     "library(patchwork)\n",
@@ -30,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -45,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -238,6 +327,7 @@
     "    intensities <- filter_na_proteins(intensities, batch_info, \"file\")\n",
     "    \n",
     "    filter_list_META[[dataset]][[name]] <- rownames(intensities)\n",
+    "    analyzed_proteins[[dataset]][[name]] <- rownames(intensities)\n",
     "\n",
     "    cat(\"Rows after all filters:\", nrow(intensities), \"\\n\")\n",
     "    intensities <- log2(intensities + 1)\n",
@@ -279,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -330,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -359,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -492,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -509,7 +599,8 @@
     "}\n",
     "\n",
     "# write to json\n",
-    "write_json(analysed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/analysed_proteins.json\")"
+    "write_json(analysed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/analysed_proteins.json\")\n",
+    "write_json(analyzed_proteins, \"/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/analysed_proteins_LABS.json\")"
    ]
   },
   {
@@ -521,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -551,6 +642,17 @@
     "    system(paste0(\"cp /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/\", dataset, \"/MA_* /home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/\", dataset, \"/results/\"))\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
