--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,102 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: ggplot2\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
-      "Loading required package: matrixStats\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘matrixStats’ was built under R version 4.2.3”\n",
-      "Loading required package: limma\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘readr’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘purrr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘stringr’ was built under R version 4.2.3”\n",
-      "Warning message:\n",
-      "“package ‘forcats’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘lubridate’ was built under R version 4.2.2”\n",
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcount()\u001b[39m  masks \u001b[34mmatrixStats\u001b[39m::count()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
-      "Warning message:\n",
-      "“package ‘ggrepel’ was built under R version 4.2.2”\n",
-      "Warning message:\n",
-      "“package ‘data.table’ was built under R version 4.2.2”\n",
-      "\n",
-      "Attaching package: ‘data.table’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:lubridate’:\n",
-      "\n",
-      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
-      "    yday, year\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    between, first, last\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    transpose\n",
-      "\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘foreach’ was built under R version 4.2.3”\n",
-      "\n",
-      "Attaching package: ‘foreach’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:purrr’:\n",
-      "\n",
-      "    accumulate, when\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘jsonlite’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    flatten\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(DEqMS)\n",
     "library(patchwork)\n",
@@ -119,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -134,167 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Dataset:  balanced \n",
-      "\n",
-      "Lab:  lab_A \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2549 24 \n",
-      "\tAfter filtering: 2511 24 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2511 24 \n",
-      "\tAfter filtering: 2511 24 \n",
-      "Rows after all filters: 2511 \n",
-      "\n",
-      "Lab:  lab_B \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2846 23 \n",
-      "\tAfter filtering: 2819 23 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2819 23 \n",
-      "\tAfter filtering: 2819 23 \n",
-      "Rows after all filters: 2819 \n",
-      "\n",
-      "Lab:  lab_C \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2820 23 \n",
-      "\tAfter filtering: 2755 23 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2755 23 \n",
-      "\tAfter filtering: 2755 23 \n",
-      "Rows after all filters: 2755 \n",
-      "\n",
-      "Lab:  lab_D \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2813 24 \n",
-      "\tAfter filtering: 2776 24 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2776 24 \n",
-      "\tAfter filtering: 2776 24 \n",
-      "Rows after all filters: 2776 \n",
-      "\n",
-      "Lab:  lab_E \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2401 24 \n",
-      "\tAfter filtering: 2354 24 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2354 24 \n",
-      "\tAfter filtering: 2354 24 \n",
-      "Rows after all filters: 2354 \n",
-      "\n",
-      "\n",
-      "Dataset:  imbalanced \n",
-      "\n",
-      "Lab:  lab_A \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2548 15 \n",
-      "\tAfter filtering: 2501 15 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2501 15 \n",
-      "\tAfter filtering: 2501 15 \n",
-      "Rows after all filters: 2501 \n",
-      "\n",
-      "Lab:  lab_B \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2846 19 \n",
-      "\tAfter filtering: 2818 19 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2818 19 \n",
-      "\tAfter filtering: 2818 19 \n",
-      "Rows after all filters: 2818 \n",
-      "\n",
-      "Lab:  lab_C \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2817 13 \n",
-      "\tAfter filtering: 2736 13 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2736 13 \n",
-      "\tAfter filtering: 2736 13 \n",
-      "Rows after all filters: 2736 \n",
-      "\n",
-      "Lab:  lab_D \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2813 21 \n",
-      "\tAfter filtering: 2778 21 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2778 21 \n",
-      "\tAfter filtering: 2778 21 \n",
-      "Rows after all filters: 2778 \n",
-      "\n",
-      "Lab:  lab_E \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2401 18 \n",
-      "\tAfter filtering: 2354 18 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2354 18 \n",
-      "\tAfter filtering: 2354 18 \n",
-      "Rows after all filters: 2354 \n",
-      "\n",
-      "\n",
-      "Dataset:  downsampled \n",
-      "\n",
-      "Lab:  lab_A \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2549 18 \n",
-      "\tAfter filtering: 2516 18 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2516 18 \n",
-      "\tAfter filtering: 2516 18 \n",
-      "Rows after all filters: 2516 \n",
-      "\n",
-      "Lab:  lab_B \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2845 16 \n",
-      "\tAfter filtering: 2822 16 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2822 16 \n",
-      "\tAfter filtering: 2822 16 \n",
-      "Rows after all filters: 2822 \n",
-      "\n",
-      "Lab:  lab_C \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2820 16 \n",
-      "\tAfter filtering: 2752 16 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2752 16 \n",
-      "\tAfter filtering: 2752 16 \n",
-      "Rows after all filters: 2752 \n",
-      "\n",
-      "Lab:  lab_D \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2813 18 \n",
-      "\tAfter filtering: 2783 18 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2783 18 \n",
-      "\tAfter filtering: 2783 18 \n",
-      "Rows after all filters: 2783 \n",
-      "\n",
-      "Lab:  lab_E \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 2401 18 \n",
-      "\tAfter filtering: 2361 18 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2361 18 \n",
-      "\tAfter filtering: 2361 18 \n",
-      "Rows after all filters: 2361 \n"
-     ]
+   "outputs": [],
+   "source": [
+    "datasets_list = c('balanced')  #, 'imbalanced', \"downsampled\"\n",
+    "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "options(warn=-1)\n",
-    "datasets_list = c('balanced', 'imbalanced', \"downsampled\") \n",
+    "datasets_list = c('balanced')  #, 'imbalanced', \"downsampled\"\n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
     "\n",
     "# empty plot\n",
@@ -310,13 +84,21 @@
     "    output_path = paste0('/home/yuliya/repos/cosybio/FedProt/evaluation/bacterial/Meta_DE/', dataset, '/')\n",
     "    cat('\\nLab: ', name, \"\\n\")\n",
     "\n",
-    "    batch_info = read_tsv(paste0(path_to_reports, name, '/metadata.tsv'), show_col_types = FALSE)\n",
+    "    batch_info = read_tsv(paste0(path_to_reports, name, '/metadata_short.tsv'), show_col_types = FALSE)\n",
     "    intensities = read_tsv(paste0(path_to_reports, name, '/protein_groups_matrix.tsv'), show_col_types = FALSE)\n",
     "    counts = read_tsv(paste0(path_to_reports, name, '/protein_counts.tsv'), show_col_types = FALSE)\n",
     "\n",
     "    intensities <- intensities %>% column_to_rownames('rowname')\n",
     "    counts <- counts %>% column_to_rownames('rowname')\n",
     "    intensities <- intensities[, batch_info$file]\n",
+    "\n",
+    "    # create design matrix for FedProt\n",
+    "    rownames(batch_info) <- batch_info$file\n",
+    "    dummy_df <- model.matrix(~condition - 1, batch_info)\n",
+    "    colnames(dummy_df) <- gsub(\"condition\", \"\", colnames(dummy_df))\n",
+    "    design <- batch_info %>% select(-c(\"condition\", \"QC_condition\")) %>% cbind(dummy_df)\n",
+    "    write_tsv(design %>% rownames_to_column(), \n",
+    "              paste0(path_to_reports, name, \"/design.tsv\"))\n",
     "\n",
     "    # filter out if count is 1 or 0\n",
     "    # cat(\"Rows before filters:\", nrow(intensities), \"\\n\")\n",
@@ -369,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -383,16 +165,8 @@
       "\n",
       "\n",
       "Dataset:  balanced\n",
-      "\tIntersection length: 2232\n",
-      "\tUnion length: 3020\n",
-      "\n",
-      "Dataset:  imbalanced\n",
-      "\tIntersection length: 2229\n",
-      "\tUnion length: 3016\n",
-      "\n",
-      "Dataset:  downsampled\n",
       "\tIntersection length: 2238\n",
-      "\tUnion length: 3027"
+      "\tUnion length: 3023"
      ]
     }
    ],
@@ -420,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -449,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -466,41 +240,17 @@
       "\tNumber of proteins:  3059 \n",
       "\tNumber of samples:  118 \n",
       "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 3059 118 \n",
-      "\tAfter filtering: 2862 118 \n",
+      "\tBefore filtering: 3059 102 \n",
+      "\tAfter filtering: 2831 102 \n",
       "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2862 118 \n",
-      "\tAfter filtering: 2862 118 \n",
-      "Rows after all filters: 2862 \n",
-      "\n",
-      "\n",
-      "Dataset:  imbalanced \n",
-      "\tNumber of proteins:  3058 \n",
-      "\tNumber of samples:  86 \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 3058 86 \n",
-      "\tAfter filtering: 2860 86 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2860 86 \n",
-      "\tAfter filtering: 2860 86 \n",
-      "Rows after all filters: 2860 \n",
-      "\n",
-      "\n",
-      "Dataset:  downsampled \n",
-      "\tNumber of proteins:  3059 \n",
-      "\tNumber of samples:  86 \n",
-      "Filtering by condition - two not-NA per condition\n",
-      "\tBefore filtering: 3059 86 \n",
-      "\tAfter filtering: 2859 86 \n",
-      "Filtering out features that have NAs in all columns\n",
-      "\tBefore filtering: 2859 86 \n",
-      "\tAfter filtering: 2859 86 \n",
-      "Rows after all filters: 2859 \n"
+      "\tBefore filtering: 2831 102 \n",
+      "\tAfter filtering: 2831 102 \n",
+      "Rows after all filters: 2831 \n"
      ]
     }
    ],
    "source": [
-    "datasets_list = c('balanced', 'imbalanced', \"downsampled\")\n",
+    "datasets_list = c('balanced') #, 'imbalanced', \"downsampled\"\n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
     "\n",
     "\n",
@@ -513,7 +263,7 @@
     "  central_batch_info = NULL\n",
     "\n",
     "  for (name in labs_list) {\n",
-    "    batch_info = read_tsv(paste0(path_to_reports, name, '/metadata.tsv'), show_col_types = FALSE)\n",
+    "    batch_info = read_tsv(paste0(path_to_reports, name, '/metadata_short.tsv'), show_col_types = FALSE)\n",
     "    intensities = read_tsv(paste0(path_to_reports, name, '/protein_groups_matrix.tsv'), show_col_types = FALSE)\n",
     "    counts = read_tsv(paste0(path_to_reports, name, '/protein_counts.tsv'), show_col_types = FALSE)\n",
     "\n",
@@ -582,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -612,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -623,9 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing  balanced  dataset\n",
-      "Processing  imbalanced  dataset\n",
-      "Processing  downsampled  dataset\n"
+      "Processing  balanced  dataset\n"
      ]
     }
    ],
