updated bacterial data structure

--- a/data/bacterial_data/01_data_preparation.ipynb
+++ b/data/bacterial_data/01_data_preparation.ipynb
@@ -78,6 +78,17 @@
       "\n",
       "    transpose\n",
       "\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘foreach’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘foreach’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:purrr’:\n",
+      "\n",
+      "    accumulate, when\n",
+      "\n",
       "\n"
      ]
     }
