updated bacterial results

--- a/evaluation/bacterial/01_run_deqms.ipynb
+++ b/evaluation/bacterial/01_run_deqms.ipynb
@@ -2,13 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.2.3”\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘matrixStats’ was built under R version 4.2.3”\n",
+      "Loading required package: limma\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidyverse’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘tibble’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘purrr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘stringr’ was built under R version 4.2.3”\n",
+      "Warning message:\n",
+      "“package ‘forcats’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘lubridate’ was built under R version 4.2.2”\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcount()\u001b[39m  masks \u001b[34mmatrixStats\u001b[39m::count()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Warning message:\n",
+      "“package ‘ggrepel’ was built under R version 4.2.2”\n",
+      "Warning message:\n",
+      "“package ‘data.table’ was built under R version 4.2.2”\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:lubridate’:\n",
+      "\n",
+      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
+      "    yday, year\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘foreach’ was built under R version 4.2.3”\n",
+      "\n",
+      "Attaching package: ‘foreach’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:purrr’:\n",
+      "\n",
+      "    accumulate, when\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘jsonlite’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    flatten\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(DEqMS)\n",
     "library(patchwork)\n",
@@ -30,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -38,14 +127,14 @@
    },
    "outputs": [],
    "source": [
-    "filter_list_META = list(\"balanced\" = list(), \"imbalanced\" = list(), \"downsampled\" = list())\n",
+    "filter_list_META = list(\"balanced\" = list())\n",
     "\n",
     "analyzed_proteins <- list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -53,22 +142,77 @@
    },
    "outputs": [],
    "source": [
-    "datasets_list = c('balanced')  #, 'imbalanced', \"downsampled\"\n",
+    "datasets_list = c('balanced')\n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Dataset:  balanced \n",
+      "\n",
+      "Lab:  lab_A \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2549 20 \n",
+      "\tAfter filtering: 2517 20 \n",
+      "Filtering out features that have NAs in all columns\n",
+      "\tBefore filtering: 2517 20 \n",
+      "\tAfter filtering: 2517 20 \n",
+      "Rows after all filters: 2517 \n",
+      "\n",
+      "Lab:  lab_B \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2846 19 \n",
+      "\tAfter filtering: 2824 19 \n",
+      "Filtering out features that have NAs in all columns\n",
+      "\tBefore filtering: 2824 19 \n",
+      "\tAfter filtering: 2824 19 \n",
+      "Rows after all filters: 2824 \n",
+      "\n",
+      "Lab:  lab_C \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2820 23 \n",
+      "\tAfter filtering: 2755 23 \n",
+      "Filtering out features that have NAs in all columns\n",
+      "\tBefore filtering: 2755 23 \n",
+      "\tAfter filtering: 2755 23 \n",
+      "Rows after all filters: 2755 \n",
+      "\n",
+      "Lab:  lab_D \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2813 20 \n",
+      "\tAfter filtering: 2780 20 \n",
+      "Filtering out features that have NAs in all columns\n",
+      "\tBefore filtering: 2780 20 \n",
+      "\tAfter filtering: 2780 20 \n",
+      "Rows after all filters: 2780 \n",
+      "\n",
+      "Lab:  lab_E \n",
+      "Filtering by condition - two not-NA per condition\n",
+      "\tBefore filtering: 2401 20 \n",
+      "\tAfter filtering: 2361 20 \n",
+      "Filtering out features that have NAs in all columns\n",
+      "\tBefore filtering: 2361 20 \n",
+      "\tAfter filtering: 2361 20 \n",
+      "Rows after all filters: 2361 \n"
+     ]
+    }
+   ],
    "source": [
     "options(warn=-1)\n",
-    "datasets_list = c('balanced')  #, 'imbalanced', \"downsampled\"\n",
+    "datasets_list = c('balanced')  \n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
     "\n",
     "# empty plot\n",
@@ -151,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -194,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -223,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -250,7 +394,7 @@
     }
    ],
    "source": [
-    "datasets_list = c('balanced') #, 'imbalanced', \"downsampled\"\n",
+    "datasets_list = c('balanced') \n",
     "labs_list = c('lab_A', 'lab_B', 'lab_C', 'lab_D' , 'lab_E')\n",
     "\n",
     "\n",
@@ -332,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "r"
