real data eval updated

--- a/evaluation/batch_effects_eval/02_second_evaluation.ipynb
+++ b/evaluation/batch_effects_eval/02_second_evaluation.ipynb
@@ -103,13 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Correlations computed for all genes from lfc_ columns.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Correlations computed for all genes from lfc_ columns.\n",
       "Correlations computed for all genes from lfc_ columns.\n"
      ]
     },
@@ -190,31 +184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'evaluation.evaluation_func' has no attribute 'simplified_plt_results'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mfp_eval\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimplified_plt_results\u001b[49m(\n\u001b[1;32m      2\u001b[0m     log_dfs,\n\u001b[1;32m      3\u001b[0m     datasets\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBacterial dataset\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHuman serum dataset\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m      4\u001b[0m     comparsions\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpyr/glu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontrol/FSGS\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      5\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'evaluation.evaluation_func' has no attribute 'simplified_plt_results'"
-     ]
-    }
-   ],
-   "source": [
-    "simplified_plt_results(\n",
-    "    log_dfs,\n",
-    "    datasets=[\"Bacterial dataset\", \"Human serum dataset\"],\n",
-    "    comparsions=[\"pyr/glu\", \"control/FSGS\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -237,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
