--- a/evaluation/batch_effects_eval/01_correction_and_analysis.ipynb
+++ b/evaluation/batch_effects_eval/01_correction_and_analysis.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -161,6 +161,16 @@
       "\tBefore filtering: 2190 102 \n",
       "\tAfter filtering: 2190 102 \n",
       "Rows after all filters: 2190 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“\u001b[1m\u001b[22m`aes_string()` was deprecated in ggplot2 3.0.0.\n",
+      "\u001b[36mℹ\u001b[39m Please use tidy evaluation idioms with `aes()`.\n",
+      "\u001b[36mℹ\u001b[39m See also `vignette(\"ggplot2-in-packages\")` for more information.”\n"
      ]
     }
    ],
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -290,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -308,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -345,23 +355,7 @@
       "Shape of the data:  320 20 \n",
       "Shape of intensities for pool  Pool4 : 320 10 \n",
       "Shape of intensities for pool  Pool6 : 320 10 \n",
-      "Data after IRS normalization:  320 59  rows\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“\u001b[1m\u001b[22m`aes_string()` was deprecated in ggplot2 3.0.0.\n",
-      "\u001b[36mℹ\u001b[39m Please use tidy evaluation idioms with `aes()`.\n",
-      "\u001b[36mℹ\u001b[39m See also `vignette(\"ggplot2-in-packages\")` for more information.”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Data after IRS normalization:  320 59  rows\n",
       "Data after correction:  320 59  rows\n"
      ]
     }
@@ -513,12 +507,12 @@
     "    pval_threshold = 0.05, logfc_threshold = 0.25,\n",
     "    show_names = FALSE\n",
     ")\n",
-    "ggsave(file = paste0(out_path, 'plots/central_volcano_plot.svg'), plot = plot_result, width = 8.5, height = 5)\n"
+    "ggsave(file = paste0(out_path, 'plots/central_volcano_plot.svg'), plot = plot_result, width = 8, height = 5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "r"
